Revise meta description for HackClaflin 2026
Updated the description meta tag for HackClaflin 2026.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HackClaflin 2026 | Claflin University's Premier Hackathon</title>
-    <meta name="description" content="Join HackClaflin 2026 - A weekend of creativity, community, and code. April 17-19, 2026 at Claflin University. Apply now!" />
+    <meta name="description" content="Join HackClaflin 2026 - One day. Big ideas. Bold innovation. Join us for Creativity, Community, and Code.. April 18, 2026 at Claflin University. Apply now!" />
     <meta name="keywords" content="hackathon, Claflin University, HBCU, coding, innovation, technology, South Carolina" />
     
     <!-- Open Graph / Facebook -->
