--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://hackclaflin.org/" />
     <meta property="twitter:title" content="HackClaflin 2026 | Claflin University's Premier Hackathon" />
-    <meta property="twitter:description" content="Join HackClaflin 2026 - A weekend of creativity, community, and code. April 17-19, 2026 at Claflin University." />
+    <meta property="twitter:description" content="Join HackClaflin 2026 - A weekend of creativity, community, and code. April 17-19, 2026 at Claflin College." />
     <script async src="https://tally.so/widgets/embed.js"></script>
   </head>
   <body class="bg-gray-50">
