--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hackclaflin.org/" />
     <meta property="og:title" content="HackClaflin 2026 | Claflin University's Premier Hackathon" />
-    <meta property="og:description" content="Join HackClaflin 2026 - A weekend of creativity, community, and code. April 17-19, 2026 at Claflin University." />
+    <meta property="og:description" content="Join HackClaflin 2026 - One day. Big ideas. Bold innovation. Join us for Creativity, Community, and Code. April 17-19, 2026 at Claflin University." />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://hackclaflin.org/" />
     <meta property="twitter:title" content="HackClaflin 2026 | Claflin University's Premier Hackathon" />
-    <meta property="twitter:description" content="Join HackClaflin 2026 - A weekend of creativity, community, and code. April 17-19, 2026 at Claflin College." />
+    <meta property="twitter:description" content="Join HackClaflin 2026 - A weekend of creativity, community, and codeOne day. Big ideas. Bold innovation. Join us for Creativity, Community, and Code. April 17-19, 2026 at Claflin College." />
     <script async src="https://tally.so/widgets/embed.js"></script>
   </head>
   <body class="bg-gray-50">
